@@ -1,0 +1,6 @@
+MIME-Version: 1.0
+Content-Type: text/plain
+Subject: Avant de partir, n'oubliez pas de =?iso-8859-1?b?cHLpcGFyZXI=?= votre
+	=?iso-8859-1?b?c+lqb3Vy?==?iso-8859-1?b?IOA=?= Paris
+
+hello
