@@ -106,7 +106,7 @@ int main()
   PASS ([parser isComplete], "parse is complete");
   PASS ([parser isComplete], "parse is complete");
 
-  PASS_EQUAL([[parser document] convertToText],
+  PASS_EQUAL([[parser mimeDocument] convertToText],
     @"This is the data in the first chunk\r\nand this is the second one\r\n"
     @"consequence", "content correct");
 
